--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Joaopaulo\\ProjetoEstoque\\": "src/"
+            "Joaopaulo\\projetoestoque\\": "src/"
         }
     },
     "authors": [
